2003-04-01  Darin Adler  <darin@apple.com>

        Reviewed by Dave.

	- fixed 3213900 -- REGRESSION: crash in CSS parser at http://radioalice.com/

        * khtml/css/cssparser.cpp: (CSSParser::parseColor): Add a missing check for nil.

2003-04-01  Darin Adler  <darin@apple.com>

        Reviewed by Trey.

	- fixed 3202542 -- REGRESSION: preinitialized password inputs do not show dots (affects mac.com)

        * kwq/KWQTextField.mm: (-[KWQTextField setPasswordMode:]): Remove code that sets the string
        value to "". This is not needed, and because a text changed signal is sent out it makes the
        caller think the text was deleted intentionally. Added code to move the string from the current
        field in use to the other field, so changing the password mode does not make the string go away.
        The old code was fragile and depended on the order of operations.

2003-03-31  Darin Adler  <darin@apple.com>

        * English.lproj/InfoPlist.strings: Changed "1.0 Beta" to "1.0 Beta 2".
        * WebCore.pbproj/project.pbxproj: Changed "1.0 Beta" to "1.0 Beta 2".

2003-03-31  David Hyatt  <hyatt@apple.com>

	Fixes for 3211862 and 3212750, add error-handling cases for
	property values to the CSS parser so the whole sheet doesn't
	get rejected.
	
        Reviewed by darin

        * khtml/css/parser.cpp:
        * khtml/css/parser.y:

2003-03-31  Darin Adler  <darin@apple.com>

        Reviewed by Chris.

	- fixed 3213093 -- REGRESSION: crash accessing menu items right after launch with about:blank as homepage

        * khtml/khtmlview.cpp: (KHTMLView::viewportMouseMoveEvent):
        Another place needed a check for null.

2003-03-31  David Hyatt  <hyatt@apple.com>

	Fix for 3211849.  I accidentally removed a BORDER_COLOR case
	from the switch when I removed the transparency check for
	the shorthand.  The case originally fell through to the case
	below it, so a straight removal was wrong.  I needed to add
	it to the following set of case labels.
	