@@ -1,3 +1,13 @@
+2003-04-01  David Hyatt  <hyatt@apple.com>
+
+	Table code fixes.  Working to try to fix excite.com.
+	
+        Reviewed by darin
+
+        * khtml/rendering/table_layout.cpp:
+        (shouldScaleColumns):
+        (AutoTableLayout::calcMinMaxWidth):
+
 2003-04-01  Darin Adler  <darin@apple.com>
 
         Reviewed by Dave.
